--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,60 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="338dp"
-        android:layout_height="373dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="31dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:srcCompat="@drawable/new_logo_done" />
 
     <EditText
         android:id="@+id/txtEmail"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/logo"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="57dp"
         android:ems="10"
         android:hint="Digite seu Email aqui"
         android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/txtPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txtEmail"
-        android:layout_marginStart="112dp"
-        android:layout_marginTop="4dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="numberPassword" />
 
-    <Button
-        android:id="@+id/btnSigin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txtPassword"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="53dp"
-        android:text="@string/common_signin_button_text" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btnCreate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txtPassword"
-        android:layout_marginStart="62dp"
-        android:layout_marginTop="53dp"
-        android:layout_toEndOf="@+id/btnSigin"
-        android:text="Create" />
-</RelativeLayout>
+        <Button
+            android:id="@+id/btnCreate"
+            android:layout_width="165dp"
+            android:layout_height="wrap_content"
+            android:text="Create" />
+
+        <Button
+            android:id="@+id/btnSigin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/common_signin_button_text" />
+    </LinearLayout>
+
+</LinearLayout>
