--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -42,13 +42,6 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="match_parent"
-        android:layout_height="91dp"
-        app:srcCompat="@drawable/done"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="56dp">
@@ -71,8 +64,14 @@
                 android:layout_height="wrap_content"
                 android:text="TextView"
                 android:textAlignment="center" />
+
         </LinearLayout>
     </ScrollView>
+
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -97,7 +96,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="318dp"
         android:orientation="horizontal">
 
         <LinearLayout
