--- a/app/src/main/res/layout/activity_profissoes.xml
+++ b/app/src/main/res/layout/activity_profissoes.xml
@@ -16,20 +16,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <TextView
         android:id="@+id/titleClasse"
-        android:layout_width="407dp"
-        android:layout_height="47dp"
+        android:layout_width="375dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="36dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Classe"
+        android:text="         Classe"
+        android:textAlignment="textStart"
+        android:textAllCaps="true"
+        android:textSize="18sp"
+        android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleBtn"
-        android:layout_width="408dp"
-        android:layout_height="629dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
