--- a/app/src/main/res/layout/activity_locais.xml
+++ b/app/src/main/res/layout/activity_locais.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Locais">
+    tools:context=".activitys.LocaisActivity">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
