--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -5,17 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PerfilActivity">
+    tools:context=".activitys.PerfilActivity">
 
-    <HorizontalScrollView
+    <TextView
+        android:id="@+id/textView4"
         android:layout_width="match_parent"
-        android:layout_height="195dp">
+        android:layout_height="wrap_content"
+        android:text="tradutor"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="#0C0B0B" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical" />
-    </HorizontalScrollView>
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:srcCompat="@drawable/work" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,24 +28,36 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="20dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/class_educacao"
-            tools:srcCompat="@tools:sample/avatars" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
+            android:id="@+id/imgAvatarPerfil"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="TextView"
+            app:srcCompat="@drawable/avatar"
+            tools:srcCompat="@drawable/retrato" />
+
+        <TextView
+            android:id="@+id/txtNamePerfil"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:freezesText="false"
+            android:gravity="center"
+            android:text="Done Corporation"
             android:textAlignment="center"
             android:textSize="18sp"
             android:textStyle="bold" />
 
     </LinearLayout>
+
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="312dp"
+        android:layout_height="52dp"
+        android:max="5"
+        android:numStars="5"
+        android:paddingLeft="75dp"
+        android:paddingRight="0dp"
+        android:progressTint="#E8FFC400" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -54,24 +71,19 @@
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView"
+                android:layout_height="31dp"
+                android:text="“Ele fez um ótimo trabalho, gostei muito dos resultados” "
                 android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="29dp"
                 android:text="TextView"
                 android:textAlignment="center" />
 
         </LinearLayout>
     </ScrollView>
-
-    <RatingBar
-        android:id="@+id/ratingBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -80,17 +92,32 @@
 
         <TextView
             android:id="@+id/textView7"
-            android:layout_width="wrap_content"
+            android:layout_width="57dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:background="#C6A59F9F"
+            android:backgroundTint="#FFFFFF"
+            android:gravity="center"
+            android:text="Currículo"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="#0A0A0A"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:background="#C6A59F9F"
+            android:backgroundTint="#C6A59F9F"
+            android:gravity="center"
+            android:text="Hitórico"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="#131313"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -100,7 +127,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="205dp"
+            android:layout_width="202dp"
             android:layout_height="match_parent"
             android:orientation="vertical"></LinearLayout>
 
@@ -112,20 +139,27 @@
             <TextView
                 android:id="@+id/textView11"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:layout_height="88dp"
+                android:paddingStart="@dimen/activity_horizontal_margin"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:text="@string/historico01"
+                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/textView13"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:layout_height="68dp"
+                android:paddingStart="@dimen/activity_horizontal_margin"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:text="@string/historico02"
+                android:textAlignment="center" />
 
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:layout_height="84dp"
+                android:text="TextView"
+                android:textAlignment="center" />
         </LinearLayout>
     </LinearLayout>
 
