--- a/app/src/main/res/layout/activity_profissoes.xml
+++ b/app/src/main/res/layout/activity_profissoes.xml
@@ -5,7 +5,7 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Profissoes">
+    tools:context=".activitys.ProfissoesActivity">
 
     <include
         android:id="@+id/include"
